Fix links text size and gaps

--- a/components/Footer/Footer.module.sass
+++ b/components/Footer/Footer.module.sass
@@ -5,10 +5,10 @@
     padding: 52px 0 34px
     border: 0
     border-top: 1px solid #59FAFA
-    background: linear-gradient(#2C6364, black 80%)
+    background: linear-gradient(#224243, $n10 40%)
 
     @media (max-width: 1023px)
-        background: linear-gradient(#2C6364, black 50%)
+        background: linear-gradient(#2C6364, $n10 50%)
 
     +t
         position: relative
@@ -122,7 +122,7 @@ $magenta-60: #632C63
             text-transform: uppercase
             font-family: "Space Grotesk", sans-serif
             font-weight: 300
-            font-size: 14px
+            font-size: 12px
             margin-bottom: 1rem
 
         a
@@ -130,7 +130,7 @@ $magenta-60: #632C63
             font-family: Proto Mono
             font-size: 14px
             transition: color .5s
-            margin-bottom: 0.75rem
+            margin-bottom: 0.4rem
             &:hover,
             &.active
                 color: #59FAFA
@@ -164,7 +164,7 @@ $magenta-60: #632C63
     font-family: "Space Grotesk", sans-serif
     color: #59FAFA
     font-weight: 300
-    font-size: 16px
+    font-size: 12px
     opacity: 0.5
     +t
         margin-right: 0
